Preserve voxel texture detail with correct normalized atlas sampling